Arreglado slide de ejemplo

--- a/src/slides/u1-test.html
+++ b/src/slides/u1-test.html
@@ -3,10 +3,9 @@
          descripcion="Filmina de Ejemplo">Agus Edme Aliciardi | Ricardo Martin Marcucci
 </include>
 
-<include src="../templates/header.html"
-         titulo="Primera Slide"></include>
-
-
+<include src="../templates/slide1.html" titulo="Primera Slide">content</include>
 <section>
     Slide1
 </section>
+
+<include src="../templates/footer.html"></include>
